--- a/Assignment3TestSuite/Assignment3TestSuite.csproj
+++ b/Assignment3TestSuite/Assignment3TestSuite.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
 	  <ProjectReference Include="..\Server\Server.csproj" />
 	  <ProjectReference Include="..\Shared\Shared.csproj" />
-	  <ProjectReference Include="..\Util\Util.csproj" />
+	  <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
 
   <ItemGroup>
